--- a/ch01/example-1.1/example.html
+++ b/ch01/example-1.1/example.html
@@ -36,7 +36,7 @@
 
       <style> 
          body {
-            background: #dddddd;
+            background: #9DC409;
          }
 
          #canvas {
